--- a/src/apiservice/package.json
+++ b/src/apiservice/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "dev": "cp ../../proto/main.proto genproto/main.proto && ",
     "start": "node index.js"
-
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.9.16"
