--- a/supportedImages/vite_react_app/Dockerfile
+++ b/supportedImages/vite_react_app/Dockerfile
@@ -1,13 +1,31 @@
-FROM codercom/code-server
+FROM codercom/code-server:4.96.4
+
+# Switch to root to perform installations
 USER root
-RUN apt update && apt upgrade -y
-RUN apt install nodejs npm -y
-RUN useradd -m -u 1001 -d /home/vscode -s /bin/bash vscode
-RUN mkdir -p /home/temp_code && chown -R vscode:vscode /home/vscode /home/temp_code
-RUN echo "vscode ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
-COPY --chown=vscode:vscode ./code /home/temp_code/
-COPY --chown=root:root entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-# Set working directory
-WORKDIR /home/vscode
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+
+# Update and install dependencies in a single layer
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y \
+    nodejs \
+    npm \
+    sudo && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+ARG USERNAME=vscode
+ARG USER_UID=1001
+ARG USER_GID=$USER_UID
+RUN groupadd --gid $USER_GID $USERNAME && \
+    useradd --uid $USER_UID --gid $USER_GID -m -s /bin/bash $USERNAME && \
+    echo "$USERNAME:vscode1234" | chpasswd && \
+    adduser $USERNAME sudo && \
+    # Create and set permissions for directories
+    mkdir -p /home/temp_code && \
+    mkdir -p /home/$USERNAME/code && \
+    chown -R $USERNAME:$USERNAME /home/$USERNAME /home/temp_code && \
+    chmod 755 /home/temp_code /home/$USERNAME/code
+
+COPY --chown=$USERNAME:$USERNAME ./code /home/temp_code/
+RUN chmod +x /usr/bin/code-server
+WORKDIR /home/$USERNAME
