--- a/src/apiservice/package.json
+++ b/src/apiservice/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon  index.js"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
