--- a/src/apiservice/Dockerfile
+++ b/src/apiservice/Dockerfile
@@ -28,5 +28,5 @@ ENV PORT=8080 \
 # EXPOSE $PORT
 
 # Command to run the application
-CMD ["npm", "run","dev"] 
+CMD ["npm", "run","start"] 
 # testing
