--- a/src/apiservice/Dockerfile
+++ b/src/apiservice/Dockerfile
@@ -8,26 +8,26 @@ WORKDIR /code
 COPY package*.json ./
 
 # Install dependencies
-RUN apk add  make gcc g++ python3
+# RUN apk add  make gcc g++ python3
 # to install bcrypt
-RUN npm install --production
-RUN npm rebuild bcrypt -–build-from-source
+RUN npm install 
+# RUN npm rebuild bcrypt -–build-from-source
 # breaking in environment of k8s so building it natively so building it natively
-RUN apk del make gcc g++ python3
+# RUN apk del make gcc g++ python3
 
 # Copy the rest of the application code
 COPY . .
 
 # Set environment variables
-ENV PORT=8080 \
-    GRPC_PORT="localhost:8081" \
-    MONGOURI="mongodb+srv://anshik:anshik12@cluster0.fuqim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" \
-    EMAIL_SERVICE_MAIL="anshikthind@gmail.com" \
-    EMAIL_SERVICE_PASS="bqmj ktff rpuy dakx" \
-    SALTROUNDS=12 \
-    JWTSECRET="zehaha" \
-    FRONTEND_URL="https://iamanshik.online" \
-    API_SERVICE_PUBLIC_IP="https://api.iamanshik.online"
+# ENV PORT=8080 \
+#     GRPC_PORT="localhost:8081" \
+#     MONGOURI="mongodb+srv://anshik:anshik12@cluster0.fuqim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" \
+#     EMAIL_SERVICE_MAIL="anshikthind@gmail.com" \
+#     EMAIL_SERVICE_PASS="bqmj ktff rpuy dakx" \
+#     SALTROUNDS=12 \
+#     JWTSECRET="zehaha" \
+#     FRONTEND_URL="https://iamanshik.online" \
+#     API_SERVICE_PUBLIC_IP="https://api.iamanshik.online"
 
 # Expose the port the app runs on
 # EXPOSE $PORT
