--- a/src/apiservice/package.json
+++ b/src/apiservice/package.json
@@ -1,37 +1,44 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Professional backend server application",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon  index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint .",
+    "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "express",
+    "api",
+    "server",
+    "grpc",
+    "websocket"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.12.6",
     "@grpc/proto-loader": "^0.7.13",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/nodemailer": "^6.4.14",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.2",
     "nodemailer": "^6.9.8",
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.11.4",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
